# information_system_mag

./: .gitignore  Dockerfile  pyproject.toml
Docker/: dman.ps1  docker-compose.yaml
src/backend/config/: asgi.py  settings.py  urls.py
src/backend/crm/: admin.py  models.py  urls.py  views.py
src/backend/crm/admin_views/: sales_analytics.py
src/backend/crm/migrations/: 0001_initial.py  0002_remove_sale_product_delete_product_delete_sale.py  0003_initial.py  0004_document_status.py  0005_alter_product_name.py  0006_alter_document_doc_date.py  0007_alter_product_sale_price_and_more.py  0008_alter_productpricelevel_minimal_quantity_and_more.py
src/backend/erp/: apps.py  models.py  views.py
src/backend/erp/admin_views/: sales_analytics.py
src/backend/erp/migrations/: 0001_initial.py  0002_remove_sale_product_delete_product_delete_sale.py  0003_initial.py  0004_document_status.py  0005_alter_product_name.py  0006_alter_document_doc_date.py  0007_alter_product_sale_price_and_more.py  0008_alter_productpricelevel_minimal_quantity_and_more.py  0009_rename_tables.py
src/backend/forecasting/: test.py
src/backend/generator/: utils.py
src/backend/replenishment/: admin.py  forms.py  models.py  services.py  utils.py
src/backend/replenishment/admin_views/: budget_input.py  create_order.py  generate_report.py  process_report.py  run_forecast.py  sse_notifications.py
src/backend/replenishment/migrations/: 0001_initial.py  0002_alter_replenishmentitem_options.py  0003_replenishmentreport_max_budget_and_more.py  0004_replenishmentreport_deals_variants_json.py  (+3 more)
(+37 files in other folders)
